@@ -2,6 +2,9 @@ Changelog for Writer2LaTeX version 1.0 -> 1.2
 
 ---------- version 1.1.3 ----------
 
+[w2l] Now exports apostrophe, single and double quotes using ' and ` characters (this creates nicer looking LaTeX files and
+  fixes a problem with hyphenation of words containing apostrophes)
+
 [w2x] New style map "heading" to map styles applied to headings to custom styles. 
 
 [w2x] The option "use_list_hack" has been renamed to "list_formatting" with the new values "css1", "css1_hack" and "hard_labels".
